Fix a big bug with update and delete views of posts with same slug, add a new mail management system, need to upgrade user table

--- a/phiroom/prod_settings.py.example
+++ b/phiroom/prod_settings.py.example
@@ -21,7 +21,8 @@ MANAGERS = ADMINS
 
 
 ## Email configuration
-DEFAULT_FROM_EMAIL = 'pro@lavilotte-rolle.fr'
+DEFAULT_FROM_EMAIL = 'pro@lavilotte-rolle.fr' # from email for normal messages
+SERVER_EMAIL = DEFAULT_FROM_EMAIL # from email for error messages
 EMAIL_SUBJECT_PREFIX = '[Phiroom]'
 
 ## for production
