Add smallest compression for previews, fix few bugs

--- a/contact/fixtures/initial_data.yaml
+++ b/contact/fixtures/initial_data.yaml
@@ -4,6 +4,6 @@
     title: Page de Contact
     content: Description de la page de contact
     source: Description de la page de contact
-    date_update: 2014-08-15 13:58:25.289021
+    date_update: 2014-08-15 13:58:25.000000+0000
 
 
