--- a/conf/fixtures/initial_data.yaml
+++ b/conf/fixtures/initial_data.yaml
@@ -7,6 +7,7 @@
     domain: phiroom.org
     home_page: 1
     comment: Paramètres par défaut
+    date: 2013-07-29 12:41:13.0000+0000
 
 - model: conf.Page
   pk: 1
