--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -6,12 +6,13 @@
   "license": "GPLv3",
   "private": true,
   "dependencies": {
-    "angular": "1.3.x",
-    "angular-mocks": "1.3.x",
+    "angular": "1.3.6",
+    "angular-mocks": "1.3.6",
     "jquery": "2.1.x",
-    "angular-route": "1.3.x",
-    "angular-resource": "1.3.x",
-    "angular-animate": "1.3.x",
+    "angular-route": "1.3.6",
+    "angular-resource": "1.3.6",
+    "angular-animate": "1.3.6",
+    "angular-sanitize": "1.3.6",
     "less": "2.1.x"
   }
 }
