--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ django-debug-toolbar            # django profiling tool
 pillow                   # pillow imaging librairy
 wand                            # Imaging librairy
 pytz                            # time manipulation librairy
-python-xmp-toolkit=2.0       # xmp librairy
+python-xmp-toolkit==2.0       # xmp librairy
 markdown
