--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,10 @@
     "angular": "1.3.x",
     "angular-mocks": "1.3.x",
     "jquery": "2.1.x",
-    "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
     "angular-animate": "1.3.x",
     "angular-sanitize": "1.3.x",
-    "less": "2.1.x"
+    "less": "2.1.x",
+    "angular-ui-router": "~0.2.15"
   }
 }
