--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "angular-sanitize": "1.3.x",
     "less": "2.5.x",
     "angular-ui-router": "~0.2.15"
+  },
+  "devDependencies": {
+    "ui-router-extras": "~0.0.13"
   }
 }
