--- a/bower.json
+++ b/bower.json
@@ -6,13 +6,13 @@
   "license": "GPLv3",
   "private": true,
   "dependencies": {
-    "angular": "1.3.x",
-    "angular-mocks": "1.3.x",
-    "jquery": "2.1.x",
-    "angular-animate": "1.3.x",
-    "angular-sanitize": "1.3.x",
+    "angular": "1.4.x",
+    "angular-mocks": "1.4.x",
+    "jquery": "2.x.x",
+    "angular-animate": "1.4.x",
+    "angular-sanitize": "1.4.x",
     "less": "2.5.x",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.x"
   },
   "devDependencies": {
     "ui-router-extras": "~0.0.13"
