--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "envify": "^3.4.0",
     "gulp": "^3.9.0",
     "gulp-html-replace": "^1.5.1",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.0",
     "gulp-react": "^3.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.2.0",
     "less": "^2.5.1",
