--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": "https://github.com/Fenykepy/phiroom.git",
   "license": "GPLv3",
-  "main": "js/app/app.js",
+  "main": "app/js/app.js",
   "dependencies": {
     "flux": "^2.0.3",
     "immutable": "^3.7.4",
@@ -14,25 +14,19 @@
     "react-router": "^0.13.3"
   },
   "devDependencies": {
-    "browserify": "^11.0.0",
-    "envify": "^3.4.0",
-    "gulp": "^3.9.0",
-    "gulp-html-replace": "^1.5.1",
-    "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-react": "^3.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.2.0",
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.20",
+    "css-loader": "^0.16.0",
     "less": "^2.5.1",
-    "reactify": "^1.1.1",
-    "uglify-js": "^2.4.23",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.0"
+    "less-loader": "^2.2.0",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "gulp",
-    "build": "gulp build",
+    "build": "webpack",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
     "test": "jest"
   },
   "jest": {
