--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "GPLv3",
   "main": "app/js/app.js",
   "dependencies": {
-    "flux": "^2.0.3",
-    "immutable": "^3.7.4",
-    "microevent": "^1.0.0",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "alt": "^0.17.3",
+    "es6-promise": "^3.0.2",
+    "express": "^4.13.3",
+    "iso": "^4.2.0",
+    "object-assign": "^4.0.1",
+    "page": "^1.6.3",
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
