--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "repository": "https://github.com/Fenykepy/phiroom.git",
   "license": "GPLv3",
-  "main": "app/js/app.js",
+  "main": "/js/boot.js",
   "dependencies": {
     "alt": "^0.17.3",
     "es6-promise": "^3.0.2",
@@ -16,22 +16,25 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.8.20",
+    "babelify": "^6.4.0",
     "css-loader": "^0.16.0",
+    "es5-shim": "^4.1.15",
+    "json-loader": "^0.5.3",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "node-libs-browser": "^0.5.3",
     "style-loader": "^0.12.3",
+    "uglify-js": "^2.5.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
-    "test": "jest"
-  },
-  "jest": {
-    "rootDir": "./js"
+    "start": "npm run build & npm run server",
+    "build": "webpack -d --progress --watch",
+    "server": "babel-node server.js"
   }
 }
