--- a/package.json
+++ b/package.json
@@ -7,34 +7,26 @@
   "license": "GPLv3",
   "main": "/js/boot.js",
   "dependencies": {
-    "alt": "^0.17.3",
-    "es6-promise": "^3.0.2",
-    "express": "^4.13.3",
-    "iso": "^4.2.0",
-    "object-assign": "^4.0.1",
-    "page": "^1.6.3",
-    "react": "^0.13.3"
+    "isomorphic-fetch": "^2.2.0",
+    "react": "^0.14.2",
+    "redux": "^3.0.0",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
-    "babel-runtime": "^5.8.20",
-    "babelify": "^6.4.0",
-    "css-loader": "^0.16.0",
-    "es5-shim": "^4.1.15",
-    "json-loader": "^0.5.3",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.0",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.0.1",
+    "babel-plugin-react-transform": "^1.1.1",
+    "expect": "^1.12.2",
+    "express": "^4.13.3",
     "node-libs-browser": "^0.5.3",
-    "style-loader": "^0.12.3",
-    "uglify-js": "^2.5.0",
-    "webpack": "^1.11.0",
-    "webpack-dev-server": "^1.10.1"
+    "react-transform-hmr": "^1.0.1",
+    "webpack": "^1.12.3",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.4.1"
   },
   "scripts": {
-    "start": "npm run build & npm run server",
-    "build": "webpack -d --progress --watch",
-    "server": "babel-node server.js"
+    "start": "node server.js"
   }
 }
