--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ node_modules/
 npm-debug.log
 
 # data files
+graphics/test/*
+graphics/test/*/
 api/phiroom/data/images/librairy/*/
 api/phiroom/data/images/librairy/*
 api/phiroom/data/images/avatars/
