--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
-    "babel-loader": "^6.0.1",
+    "babel-loader": "^6.1.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-react": "^6.1.2",
     "expect": "^1.12.2",
     "express": "^4.13.3",
     "node-libs-browser": "^0.5.3",
@@ -25,6 +27,9 @@
     "webpack": "^1.12.3",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   },
   "scripts": {
     "start": "node server.js"
