--- a/package.json
+++ b/package.json
@@ -20,16 +20,23 @@
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.1.2",
+    "css-loader": "^0.22.0",
     "expect": "^1.12.2",
     "express": "^4.13.3",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
     "react-transform-hmr": "^1.0.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.3",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.4.1"
   },
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "scripts": {
     "start": "node server.js"
