--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.0",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "reselect": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
