--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "GPLv3",
   "main": "./",
   "dependencies": {
+    "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
