--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^0.22.0",
     "expect": "^1.12.2",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^0.9.1",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
