--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
     "isomorphic-fetch": "^2.2.0",
+    "marked": "^0.3.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
