--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "reselect": "^2.5.1"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.4.0",
     "babel-core": "^6.1.2",
     "babel-loader": "^6.1.0",
     "babel-plugin-react-transform": "^1.1.1",
