--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "cookie-parser": "^1.4.0",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
+    "install": "^0.8.1",
     "isomorphic-fetch": "^2.2.0",
     "marked": "^0.3.5",
+    "npm": "^3.10.5",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
-    "reselect": "^2.5.1"
+    "reselect": "^2.5.1",
+    "response-time": "^2.3.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
