--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -1,12 +1,13 @@
-django==1.9                     # django framework
-django-mptt                     # hierarchical models for django
-djangorestframework             # django rest framework
-django-debug-toolbar            # django profiling tool
-pillow                          # pillow imaging librairy
-wand                            # Imaging librairy
-#exempi
-pytz                            # time manipulation librairy
-python-xmp-toolkit==2.0         # xmp librairy
-markdown                        # markdown librairy
-djangorestframework-jwt         # json web token for auth
-django-cors-headers             # CORS headers middleware for django, useful to consume api from other domains
+Django==1.9
+django-cors-headers==1.3.1
+django-debug-toolbar==1.6
+django-mptt==0.8.7
+djangorestframework==3.5.3
+djangorestframework-jwt==1.9.0
+Markdown==2.6.7
+Pillow==3.4.2
+PyJWT==1.4.2
+python-xmp-toolkit==2.0.0
+pytz==2016.10
+sqlparse==0.2.2
+Wand==0.4.4
